--- a/css/style.css
+++ b/css/style.css
@@ -292,8 +292,8 @@ a h4:hover {
   width: 100%;
   top: 0;
   left: 0;
-  background: #1a1a37;
-  opacity: 0.5;
+  /* background: #1a1a37; */
+  /* opacity: 0.5; */
 }
 
 .outline-0 {
