--- a/css/style.css
+++ b/css/style.css
@@ -520,10 +520,10 @@ textarea.form-control {
   position: absolute;
   left: 0;
   bottom: 0;
-  height: 6px;
+  height: 2px;
   width: 100%;
   content: "";
-  background: #fff;
+  background: #0B0B45;
   transform: scaleY(0);
   transform-origin: top;
   transition: transform 0.3s ease;
